--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 </head>
 <body>
     <h1>Welcome to My GitHub Page!</h1>
-    <p>Ciao sto provando a far funzionare sta cacata, dov'è finito lo sfondo?</p>
+    <p>Ciao sto provando a far funzionare sta cacata, dov'è finito lo sfondo?.</p>
 </body>
 </html>
