--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,10 +13,24 @@
             background-color: #334;
             color: white;
         }
+        /* Style for dropdown menu */
+        .dropdown {
+            padding: 10px;
+            font-size: 16px;
+            color: black;
+        }
     </style>
 </head>
 <body>
     <h1>WORK IN PROGRESS</h1>
     <p>Un elettronico sta provando a programmare....</p>
+
+    <!-- Dropdown menu -->
+    <select class="dropdown">
+        <option value="option1">Option 1</option>
+        <option value="option2">Option 2</option>
+        <option value="option3">Option 3</option>
+        <!-- Add more options as needed -->
+    </select>
 </body>
 </html>
