--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Work in Progress</title>
+    <title>Your Page Title</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
+            margin: 0;
+            padding: 0;
             background-color: #334;
             color: white;
+            text-align: center;
         }
-        /* Style for dropdown menu */
-        .dropdown {
-            padding: 10px;
-            font-size: 16px;
-            color: black;
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        .content {
+            margin: 20px;
         }
     </style>
 </head>
 <body>
-    <h1>WORK IN PROGRESS</h1>
-    <p>Un elettronico sta provando a programmare....</p>
+    <!-- Image at the top -->
+    <img src="OSC.jpg" alt="">
 
-    <!-- Dropdown menu -->
-    <select class="dropdown">
-        <option value="option1">Option 1</option>
-        <option value="option2">Option 2</option>
-        <option value="option3">Option 3</option>
-        <!-- Add more options as needed -->
-    </select>
+    <!-- Content section -->
+    <div class="content">
+        <p>Your first paragraph text goes here.</p>
+        <p>Your second paragraph text goes here.</p>
+    </div>
 </body>
 </html>
