--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 </head>
 <body>
     <!-- Image at the top -->
-    <img src="OSC.jpg" alt="">
+    <img src="OSC.jpg" alt="PROGETTI E APPUNTI">
 
     <!-- Content section -->
     <div class="content">
-        <p>Your first paragraph text goes here.</p>
-        <p>Your second paragraph text goes here.</p>
+        <p>Qui caricherò i miei progetti realizzati per aziende e gare varie.</p>
+        <p>Qua invece ci sarà qualche mio appunto sugli ultimi esperimenti e tecnologie sotto test ;) </p>
     </div>
 </body>
 </html>
