--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
+    <title>Appunti e Progetti</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -24,6 +24,9 @@
     </style>
 </head>
 <body>
+    <!-- Title before the image -->
+    <h1>Appunti e Progetti</h1>
+    
     <!-- Image at the top -->
     <img src="OSC.jpg" alt="PROGETTI E APPUNTI">
 
