--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
             padding: 0;
             background-color: #334;
             color: white;
+            text-align: left;
+        }
+        h1 {
             text-align: center;
+            margin-bottom: 20px;
         }
         img {
             max-width: 100%;
