--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
 
     <!-- Content section -->
     <div class="content">
+        <p></p>
+        <p>Appunti</p>
         <p>Qui caricherò i miei progetti realizzati per aziende e gare varie.</p>
+        <p></p>
+        <p>Progetti</p>
         <p>Qua invece ci sarà qualche mio appunto sugli ultimi esperimenti e tecnologie sotto test ;) </p>
+        <p></p>
     </div>
 </body>
 </html>
