--- a/index.html
+++ b/index.html
@@ -14,35 +14,41 @@
             color: white;
             text-align: left;
         }
-        h1 {
+        .image-container {
+            position: relative;
             text-align: center;
-            margin-bottom: 20px;
         }
-        img {
-            max-width: 80%;
+        .image-container img {
+            width: 80%;
             height: auto;
+            margin: 0 auto; /* Center the image */
+        }
+        .image-container h1 {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
         }
         .content {
             margin: 20px;
+            font-size: 18px; /* Adjust font size as needed */
         }
     </style>
 </head>
 <body>
-    <!-- Title before the image -->
-    <h1>Appunti e Progetti</h1>
-    
-    <!-- Image at the top -->
-    <img src="OSC.jpg" alt="PROGETTI E APPUNTI">
+    <!-- Image and title container -->
+    <div class="image-container">
+        <img src="OSC.jpg" alt="PROGETTI E APPUNTI">
+        <h1>Appunti e Progetti</h1>
+    </div>
 
     <!-- Content section -->
     <div class="content">
-        <p></p>
         <p>Appunti</p>
         <p>Qui caricherò i miei progetti realizzati per aziende e gare varie.</p>
-        <p></p>
         <p>Progetti</p>
-        <p>Qua invece ci sarà qualche mio appunto sugli ultimi esperimenti e tecnologie sotto test ;) </p>
-        <p></p>
+        <p>Qua invece ci sarà qualche mio appunto sugli ultimi esperimenti e tecnologie sotto test ;)</p>
     </div>
 </body>
 </html>
