--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             text-align: center;
         }
         .image-container img {
-            width: 80%;
+            width: 70%;
             height: auto;
             margin: 0 auto; /* Center the image */
         }
@@ -32,7 +32,7 @@
         }
         .content {
             margin: 20px;
-            font-size: 18px; /* Adjust font size as needed */
+            font-size: 20px; /* Adjust font size as needed */
         }
     </style>
 </head>
@@ -48,7 +48,7 @@
         <p>Appunti</p>
         <p>Qui caricherò i miei progetti realizzati per aziende e gare varie.</p>
         <p>Progetti</p>
-        <p>Qua invece ci sarà qualche mio appunto sugli ultimi esperimenti e tecnologie sotto test ;)</p>
+        <p>Qua invece ci sarà qualche mio appunto sugli ultimi esperimenti\n e tecnologie sotto test ;)</p>
     </div>
 </body>
 </html>
