--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             text-align: center;
         }
         .image-container img {
-            width: 70%;
+            width: 75%;
             height: auto;
             margin: 0 auto; /* Center the image */
         }
@@ -29,6 +29,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             color: white;
+            font-size: 42px; /* Change font size here */
         }
         .content {
             margin: 20px;
@@ -48,7 +49,7 @@
         <p>Appunti</p>
         <p>Qui caricherò i miei progetti realizzati per aziende e gare varie.</p>
         <p>Progetti</p>
-        <p>Qua invece ci sarà qualche mio appunto sugli ultimi esperimenti\n e tecnologie sotto test ;)</p>
+        <p>Qua invece ci sarà qualche mio appunto sugli ultimi esperimenti e tecnologie sotto test ;)</p>
     </div>
 </body>
 </html>
