--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             text-align: center;
         }
         .image-container img {
-            width: 75%;
+            width: 80%;
             height: auto;
             margin: 0 auto; /* Center the image */
         }
@@ -40,7 +40,7 @@
 <body>
     <!-- Image and title container -->
     <div class="image-container">
-        <img src="OSC.jpg" alt="PROGETTI E APPUNTI">
+        <img src="AMP.jpg" alt="PROGETTI E APPUNTI">
         <h1>Appunti e Progetti</h1>
     </div>
 
