--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <!-- Image and title container -->
     <div class="image-container">
-        <img src="AMP.jpg" alt="PROGETTI E APPUNTI">
+        <img src="OSC.jpg" alt="PROGETTI E APPUNTI">
         <h1>Appunti e Progetti</h1>
     </div>
 
