--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         .image-container img {
             width: 100%;
             height: auto;
-            margin: 0 auto; /* Center the image */
+            margin: 0 auto;
         }
         .image-container h1 {
             position: absolute;
-            top: 50%;
+            top: 40%;
             left: 50%;
             transform: translate(-50%, -50%);
-            color: white;
-            font-size: 42px; /* Change font size here */
+            color: black;
+            font-size: 48px;
         }
         .content {
             margin: 20px;
-            font-size: 20px; /* Adjust font size as needed */
+            font-size: 20px;
         }
     </style>
 </head>
