--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             top: 40%;
             left: 50%;
             transform: translate(-50%, -50%);
-            color: black;
+            color: white;
             font-size: 48px;
         }
         .content {
