--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <!-- Content section -->
     <div class="content">
         <p>Appunti</p>
-        <p>Qui caricherò i miei progetti realizzati per aziende e gare varie.</p>
+        <p>Qui ci sarà qualche mio appunto sugli ultimi esperimenti e tecnologie sotto test ;)</p>
         <p>Progetti</p>
-        <p>Qua invece ci sarà qualche mio appunto sugli ultimi esperimenti e tecnologie sotto test ;)</p>
+        <p>Qua invece caricherò i miei progetti realizzati per aziende e gare varie.</p>
     </div>
 </body>
 </html>
