--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         .image-container img {
             width: 100%;
-            height: auto;
+            height: 50%;
             margin: 0 auto;
         }
         .image-container h1 {
