--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appunti e Progetti</title>
     <style>
@@ -20,7 +19,7 @@
         }
         .image-container img {
             width: 100%;
-            height: 50%;
+            height: 300px;
             margin: 0 auto;
         }
         .image-container h1 {
