--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Appunti e Progetti</title>
+    <title>Progetti ed Esperimenti</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,7 +19,7 @@
         }
         .image-container img {
             width: 100%;
-            height: 150px;
+            height: 200px;
             margin: 0 auto;
         }
         .image-container h1 {
@@ -40,15 +40,17 @@
     <!-- Image and title container -->
     <div class="image-container">
         <img src="OSC.jpg" alt="PROGETTI E APPUNTI">
-        <h1>Appunti e Progetti</h1>
+        <h1>Progetti ed Esperimenti</h1>
     </div>
 
     <!-- Content section -->
     <div class="content">
-        <p>Appunti</p>
-        <p>Qui ci sarà qualche mio appunto sugli ultimi esperimenti e tecnologie sotto test ;)</p>
-        <p>Progetti</p>
-        <p>Qua invece caricherò i miei progetti realizzati per aziende e gare varie.</p>
+        <p>    Note</p>
+        <p>        Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse,</p>
+        <p>         oltre a mostrare la mia esperienza pregressa.</p> 
+        <p>
+        <p>    Attivita' in corso</p>
+        <p>        Qua invece caricherò i miei progetti in fase di realizzazione.</p>
     </div>
 </body>
 </html>
