--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- Content section -->
     <div class="content">
-        <p>    Note</p>
+        <p>&nbsp;&nbsp;Note</p>
         <p>        Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse,</p>
         <p>         oltre a mostrare la mia esperienza pregressa.</p> 
         <p>
