--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     <!-- Content section -->
     <div class="content">
         <p>&emsp;Note</p>
-        <p>        Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse,</p>
-        <p>         oltre a mostrare la mia esperienza pregressa.</p> 
-        <p>
-        <p>    Attivita' in corso</p>
-        <p>        Qua invece caricherò i miei progetti in fase di realizzazione.</p>
+        <p>&emsp;&emsp;Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse,</p>
+        <p>&emsp;&emsp; oltre a mostrare la mia esperienza pregressa.</p> 
+        <br>
+        <p>&emsp;Attivita' in corso</p>
+        <p>&emsp;&emsp;Qua invece caricherò i miei progetti in fase di realizzazione.</p>
     </div>
 </body>
 </html>
