--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
             margin: 20px;
             font-size: 20px;
         }
+        .navbar {
+            background-color: #222;
+            overflow: hidden;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+        .navbar a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
     </style>
 </head>
 <body>
@@ -51,6 +71,14 @@
         <br>
         <p>&emsp;Attivita' in corso</p>
         <p>&emsp;&emsp;Qua invece caricherò i miei progetti in fase di realizzazione.</p>
+    </div>
+
+    <!-- Navbar section -->
+    <div class="navbar">
+        <a href="#">HOME</a>
+        <a href="#">Progetti</a>
+        <a href="#">Esperimenti</a>
+        <a href="#">Contatti</a>
     </div>
 </body>
 </html>
