--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         .navbar {
             background-color: #222;
             overflow: hidden;
-            position: relative;
-            bottom: 0;
+            position: absolute;
+            top: 200px;
             width: 100%;
         }
         .navbar a {
