--- a/index.html
+++ b/index.html
@@ -65,17 +65,15 @@
 
         <!-- Navbar section -->
     <div class="navbar">
-        <a href="#">HOME</a>
-        <a href="#">Progetti</a>
-        <a href="#">Esperimenti</a>
-        <a href="#">Contatti</a>
+        <a href="index.html">HOME</a>
+        <a href="progetti.html">Progetti</a>
+        <a href="esperimenti.html">Esperimenti</a>
+        <a href="contatti.html">Contatti</a>
     </div>
 
     <!-- Content section -->
     <div class="content">
         <br>
-        <br>
-        <p>&emsp;Note</p>
         <p>&emsp;&emsp;Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse,</p>
         <p>&emsp;&emsp; oltre a mostrare la mia esperienza pregressa.</p> 
         <br>
