--- a/progetti.html
+++ b/progetti.html
@@ -17,10 +17,11 @@
             position: relative;
             text-align: center;
         }
-        .image-container img {
-            width: 100%;
-            height: 200px;
-            margin: 0 auto;
+	.image-container img {
+	    width: 100%;
+	    height: 200px;
+	    object-fit: cover;
+	}
         }
         .image-container h1 {
             position: absolute;
