--- a/progetti.html
+++ b/progetti.html
@@ -20,8 +20,7 @@
 	.image-container img {
 	    width: 100%;
 	    height: 200px;
-	    margin: 0 auto;
-	    object-fit: cover;
+	    object-fit: scale-down;
 	}
         }
         .image-container h1 {
