--- a/progetti.html
+++ b/progetti.html
@@ -21,8 +21,8 @@
 	    width: 100%;
 	    height: 200px;
 	    object-fit: scale-down;
+	    margin: 0 auto;
 	}
-        }
         .image-container h1 {
             position: absolute;
             top: 40%;
