--- a/progetti.html
+++ b/progetti.html
@@ -20,8 +20,8 @@
 	.image-container img {
 	    width: 100%;
 	    height: 200px;
-	    object-fit: scale-down;
-	    margin: 0 auto;
+	    object-fit: contain;
+	    <!-- margin: 0 auto; -->
 	}
         .image-container h1 {
             position: absolute;
