--- a/progetti.html
+++ b/progetti.html
@@ -19,9 +19,8 @@
         }
 	.image-container img {
 	    width: 100%;
-	    height: 200px;
-	    object-fit: contain;
-	    <!-- margin: 0 auto; -->
+	    height: auto;
+	    margin: 0 auto;
 	}
         .image-container h1 {
             position: absolute;
