--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
     <!-- Content section -->
     <div class="content">
         <br>
-        <p>&emsp;&emsp;Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse,</p>
-        <p>&emsp;&emsp; oltre a mostrare la mia esperienza pregressa.</p> 
+        <p>&emsp;&emsp;Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse, oltre a mostrare la mia esperienza pregressa.</p>
         <br>
         <p>&emsp;Attivita' in corso</p>
         <p>&emsp;&emsp;Qua invece caricherò i miei progetti in fase di realizzazione.</p>
