--- a/esperimenti.html
+++ b/esperimenti.html
@@ -59,7 +59,7 @@
 <body>
     <!-- Image and title container -->
     <div class="image-container">
-        <img src="#" alt="PROGETTI E APPUNTI">
+        <img src="EXP.jpg" alt="PROGETTI E APPUNTI">
         <h1>Esperimenti</h1>
     </div>
 
