--- a/progetti.html
+++ b/progetti.html
@@ -59,7 +59,7 @@
 <body>
     <!-- Image and title container -->
     <div class="image-container">
-        <img src="AMP.jpg" alt="PROGETTI">
+        <img src="PRJ.jpg" alt="PROGETTI">
         <h1>Progetti</h1>
     </div>
 
