--- a/contatti.html
+++ b/contatti.html
@@ -59,7 +59,7 @@
 <body>
     <!-- Image and title container -->
     <div class="image-container">
-        <img src="OSC.jpg" alt="PROGETTI E APPUNTI">
+        <img src="CNT.jpg" alt="PROGETTI E APPUNTI">
         <h1>Progetti ed Esperimenti</h1>
     </div>
 
