--- a/contatti.html
+++ b/contatti.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Progetti ed Esperimenti</title>
+    <title></title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,8 +59,8 @@
 <body>
     <!-- Image and title container -->
     <div class="image-container">
-        <img src="CNT.jpg" alt="PROGETTI E APPUNTI">
-        <h1>Progetti ed Esperimenti</h1>
+        <img src="CNT.jpeg" alt="PROGETTI E APPUNTI">
+        <h1></h1>
     </div>
 
         <!-- Navbar section -->
@@ -72,12 +72,14 @@
     </div>
 
     <!-- Content section -->
-    <div class="content">
-        <br>
-        <p>Mail: edoardo23g@gmail.com</p>
-        <br>
-        <p>Linkedin: www.linkedin.com/in/edoardo-grillo-9b218b187</p>
-        <br>
-    </div>
+<div class="content">
+    <br>
+    <!-- Email link -->
+    <p>Mail: <a href="mailto:edoardo23g@gmail.com">edoardo23g@gmail.com</a></p>
+    <br>
+    <!-- LinkedIn link -->
+    <p>Linkedin: <a href="https://www.linkedin.com/in/edoardo-grillo-9b218b187" target="_blank">www.linkedin.com/in/edoardo-grillo-9b218b187</a></p>
+    <br>
+</div>
 </body>
 </html>
