--- a/contatti.html
+++ b/contatti.html
@@ -74,11 +74,11 @@
     <!-- Content section -->
 <div class="content">
     <br>
-    <!-- Email link -->
-    <p>Mail: <a href="mailto:edoardo23g@gmail.com">edoardo23g@gmail.com</a></p>
+    <!-- Email link with inline CSS for white color -->
+    <p>Mail: <a href="mailto:edoardo23g@gmail.com" style="color: white; text-decoration: none;">edoardo23g@gmail.com</a></p>
     <br>
-    <!-- LinkedIn link -->
-    <p>Linkedin: <a href="https://www.linkedin.com/in/edoardo-grillo-9b218b187" target="_blank">www.linkedin.com/in/edoardo-grillo-9b218b187</a></p>
+    <!-- LinkedIn link with inline CSS for white color -->
+    <p>Linkedin: <a href="https://www.linkedin.com/in/edoardo-grillo-9b218b187" target="_blank" style="color: white; text-decoration: none;">www.linkedin.com/in/edoardo-grillo-9b218b187</a></p>
     <br>
 </div>
 </body>
