--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Progetti ed Esperimenti</title>
+    <title>Portfolio Progetti</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,12 +60,12 @@
     <!-- Image and title container -->
     <div class="image-container">
         <img src="MAIN.jpg" alt="PROGETTI E APPUNTI">
-        <h1>Progetti ed Esperimenti</h1>
+        <h1>Portfolio Progetti</h1>
     </div>
 
         <!-- Navbar section -->
     <div class="navbar">
-        <a href="index.html">HOME</a>
+        <a href="index.html">Home</a>
         <a href="progetti.html">Progetti</a>
         <a href="esperimenti.html">Esperimenti</a>
         <a href="contatti.html">Contatti</a>
@@ -74,10 +74,13 @@
     <!-- Content section -->
     <div class="content">
         <br>
+        <br>
         <p>&emsp;&emsp;Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse, oltre a mostrare la mia esperienza pregressa.</p>
         <br>
-        <p>&emsp;Attivita' in corso</p>
-        <p>&emsp;&emsp;Qua invece caricherò i miei progetti in fase di realizzazione.</p>
+        <br>
+        <p>&emsp;Attivita' in corso:</p>
+        <br>
+        <p>&emsp;&emsp;> Geolocalizzazione di un robot in un campo, Gennaio 2024</p>
     </div>
 </body>
 </html>
