--- a/progetti.html
+++ b/progetti.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Progetti</title>
+    <title>Portfolio Progetti</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,13 +60,12 @@
     <!-- Image and title container -->
     <div class="image-container">
         <img src="PRJ.jpg" alt="PROGETTI">
-        <h1>Progetti</h1>
+        <h1>Portfolio Progetti</h1>
     </div>
 
         <!-- Navbar section -->
     <div class="navbar">
-        <a href="index.html">HOME</a>
-        <a href="progetti.html">Progetti</a>
+        <a href="index.html">Progetti</a>
         <a href="esperimenti.html">Esperimenti</a>
         <a href="contatti.html">Contatti</a>
     </div>
@@ -74,11 +73,11 @@
     <!-- Content section -->
     <div class="content">
         <br>
-        <p>&emsp;Listone dei progetti:</p>
-		<br>
-        <p>&emsp;&emsp;> Controllo livello del lago di Varese per ARPA, Marzo 2017</p> 
         <br>
-		<br>
+        <br>
+        <p>&emsp;&emsp;Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse, oltre a mostrare la mia esperienza pregressa.</p>
+        <br>
+        <br>
 		<br>
 		<p>&emsp;&emsp;> Robocup Rescue, Aprile 2017</p> 
         <br>
