--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
         <!-- Navbar section -->
     <div class="navbar">
-        <a href="index.html">Progetti</a>
-        <a href="esperimenti.html">Esperimenti</a>
+        <a href="index.html">Home</a>
+        <a href="esperimenti.html">Archivio</a>
         <a href="contatti.html">Contatti</a>
     </div>
 
