--- a/esperimenti.html
+++ b/esperimenti.html
@@ -73,9 +73,12 @@
     <!-- Content section -->
     <div class="content">
         <br>
-                <p>&emsp;Esperimenti in corso:</p>
+	    <br>
+	    <br>
+                <p>&emsp;Archivio di tutti i progetti:</p>
 		<br>
-        <p>&emsp;&emsp;> Conversione di stampante 3D al GaN?, Gennaio 2024</p> 
+	    <br>
+        <p>&emsp;&emsp;> Robocup 2017</p> 
         <br>
         <br>
     </div>
