--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <!-- Navbar section -->
     <div class="navbar">
         <a href="index.html">Home</a>
-        <a href="esperimenti.html">Archivio</a>
+        <a href="archivio.html">Archivio</a>
         <a href="contatti.html">Contatti</a>
     </div>
 
