--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
     <!-- Image and title container -->
     <div class="image-container">
-        <img src="PRJ.jpg" alt="PROGETTI">
+        <img src="CNT.jpeg" alt="PROGETTI">
         <h1>Portfolio Progetti</h1>
     </div>
 
