--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             top: 40%;
             left: 50%;
             transform: translate(-50%, -50%);
-            color: white;
-            font-size: 48px;
+            color: black;
+            font-size: 56px;
         }
         .content {
             margin: 20px;
