--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
 	    height: auto;
 	    margin: 0 auto;
 	}
-        .image-container h1 {
-            position: absolute;
-            top: 40%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: black;
-            font-size: 56px;
-        }
+	.image-container h1 {
+	    position: absolute;
+	    top: 30%;
+	    left: 50%;
+	    transform: translate(-50%, -50%);
+	    color: black;
+	    font-size: 52px;
+	    font-weight: bold; 
+	    font-family: 'London Bridge', sans-serif; 
+	}
         .content {
             margin: 20px;
             font-size: 20px;
