--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	    color: black;
 	    font-size: 52px;
 	    font-weight: bold; 
-	    font-family: 'Comic Sans MS', sans-serif; 
+	    font-family: 'Pacifico', sans-serif; 
 	}
         .content {
             margin: 20px;
