--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	}
 	.image-container h1 {
 	    position: absolute;
-	    top: 20%;
+	    top: 30%;
 	    left: 50%;
 	    transform: translate(-50%, -50%);
 	    color: black;
@@ -61,7 +61,7 @@
 <body>
     <!-- Image and title container -->
     <div class="image-container">
-        <img src="CNT.jpeg" alt="PROGETTI">
+        <img src="MAIN.jpg" alt="PROGETTI">
         <h1>Portfolio Progetti</h1>
     </div>
 
