--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	    top: 30%;
 	    left: 50%;
 	    transform: translate(-50%, -50%);
-	    color: black;
-	    font-size: 54px;
+	    color: white;
+	    font-size: 56px;
 	    font-weight: bold; 
 	    font-family: 'Futura', sans-serif; 
 	}
