--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	    transform: translate(-50%, -50%);
 	    color: white;
 	    font-size: 58px;
-	    font-family: 'Futura', sans-serif; 
+	    font-family: 'Caveat', sans-serif; 
 	}
         .content {
             margin: 20px;
