--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 	    top: 30%;
 	    left: 50%;
 	    transform: translate(-50%, -50%);
-	    color: white;
-	    font-size: 58px;
-	    font-family: 'Caveat', sans-serif; 
+	    color: black;
+	    font-size: 56px;
+	    font-weight: bold;
+	    font-family: 'Comic Sans MS', cursive, sans-serif;
 	}
         .content {
             margin: 20px;
