--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	    top: 30%;
 	    left: 50%;
 	    transform: translate(-50%, -50%);
-	    color: black;
-	    font-size: 56px;
+	    color: white;
+	    font-size: 58px;
 	    font-weight: bold;
 	    font-family: 'Comic Sans MS', cursive, sans-serif;
 	}
