--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 	}
 	.image-container h1 {
 	    position: absolute;
-	    top: 30%;
+	    top: 20%;
 	    left: 50%;
 	    transform: translate(-50%, -50%);
 	    color: white;
 	    font-size: 58px;
 	    font-weight: bold;
-	    font-family: 'Comic Sans MS', cursive, sans-serif;
+	    font-family: 'Comic Sans MS', sans-serif;
 	}
         .content {
             margin: 20px;
