--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             text-align: center;
         }
 	.image-container img {
-	    width: 100%;
-	    height: auto;
-	    margin: 0 auto;
+            width: 100%;
+            height: 200px;
+            margin: 0 auto;
 	}
 	.image-container h1 {
 	    position: absolute;
