--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
     <div class="content">
         <br>
         <br>
-        <p>&emsp;&emsp;Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse, oltre a mostrare la mia esperienza pregressa.</p>
-        <br>
+        <p>&emsp;&emsp;Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse, si possono trovare tutti nell'archivio.</p>
+        <p>&emsp;&emsp;Mentre qui nella home, mostro l'ultimo in ordine cronologico.
+	    <br>
         <br>
 		<br>
 		<p>&emsp;&emsp;> Robocup Rescue, Aprile 2017</p> 
