--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             padding: 14px 16px;
             text-decoration: none;
             font-size: 17px;
+	    font-weight: bold;
+	    font-family: 'Comic Sans MS', sans-serif;
         }
         .navbar a:hover {
             background-color: #ddd;
