--- a/contatti.html
+++ b/contatti.html
@@ -17,19 +17,21 @@
             position: relative;
             text-align: center;
         }
-        .image-container img {
+	.image-container img {
             width: 100%;
             height: 200px;
             margin: 0 auto;
-        }
-        .image-container h1 {
-            position: absolute;
-            top: 40%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: white;
-            font-size: 48px;
-        }
+	}
+	.image-container h1 {
+	    position: absolute;
+	    top: 20%;
+	    left: 50%;
+	    transform: translate(-50%, -50%);
+	    color: white;
+	    font-size: 62px;
+	    font-weight: bold;
+	    font-family: 'Comic Sans MS', sans-serif;
+	}
         .content {
             margin: 20px;
             font-size: 20px;
@@ -49,6 +51,8 @@
             padding: 14px 16px;
             text-decoration: none;
             font-size: 17px;
+	    font-weight: bold;
+	    font-family: 'Comic Sans MS', sans-serif;
         }
         .navbar a:hover {
             background-color: #ddd;
