--- a/contatti.html
+++ b/contatti.html
@@ -79,10 +79,10 @@
     <br>
 	<br>
     <!-- Email link with inline CSS for white color -->
-    <p>Mail: <a href="mailto:edoardo23g@gmail.com" style="color: white; text-decoration: none;">edoardo23g@gmail.com</a></p>
+    <p>&emsp;Mail: <a href="mailto:edoardo23g@gmail.com" style="color: white; text-decoration: none;">edoardo23g@gmail.com</a></p>
     <br>
     <!-- LinkedIn link with inline CSS for white color -->
-    <p>Linkedin: <a href="https://www.linkedin.com/in/edoardo-grillo-9b218b187" target="_blank" style="color: white; text-decoration: none;">www.linkedin.com/in/edoardo-grillo-9b218b187</a></p>
+    <p>&emsp;Linkedin: <a href="https://www.linkedin.com/in/edoardo-grillo-9b218b187" target="_blank" style="color: white; text-decoration: none;">www.linkedin.com/in/edoardo-grillo-9b218b187</a></p>
     <br>
 </div>
 </body>
