--- a/archivio.html
+++ b/archivio.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Archivio</title>
+    <title></title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -64,7 +64,7 @@
     <!-- Image and title container -->
     <div class="image-container">
         <img src="EXP.jpg" alt="PROGETTI E APPUNTI">
-        <h1>Archivio</h1>
+        <h1></h1>
     </div>
 
         <!-- Navbar section -->
@@ -81,10 +81,9 @@
 	    <br>
                 <p>&emsp;&emsp;Archivio di tutti i progetti:</p>
 		<br>
-	    <br>
         <p>&emsp;&emsp;> Robocup, 2017</p> 
         <br>
-        <br>
+	    <br>
 	<p>&emsp;&emsp;> Robot dimostrativo ST, 2018</p> 
         <br>
         <br>
