--- a/index.html
+++ b/index.html
@@ -80,17 +80,13 @@
         <br>
         <p>&emsp;&emsp;Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse, si possono trovare tutti nell'archivio.</p>
         <p>&emsp;&emsp;Mentre qui nella home, mostro l'ultimo in ordine cronologico.
-	    <br>
+	<br>
         <br>
-		<br>
-		<p>&emsp;&emsp;> Robocup Rescue, Aprile 2017</p> 
+	<br>
+	<p>&emsp;&emsp;Ultimo progetto: Dispositivo per il tracciamento di un robot via GPS
         <br>
-		<br>
-		<br>
-		<p>&emsp;&emsp;> Riconoscimento di oggetti attraverso videocamera e API Google, Maggio 2016</p> 
-        <br>
-		<br>
-		<br>
+	<!-- Inserting an image -->
+    	<img src="MAIN.jpg" alt="Description of the image">
     </div>
 </body>
 </html>
