--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	<p>&emsp;&emsp;Ultimo progetto: Dispositivo per il tracciamento di un robot via GPS
         <br>
 	<!-- Inserting an image -->
-    	<img src="MAIN.jpg" alt="Description of the image">
+    	<img src="#" alt="Description of the image">
     </div>
 </body>
 </html>
