--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
             background-color: #ddd;
             color: black;
         }
+	.project-image {
+    display: block;
+    margin: auto; /* Centers the image */
+    max-width: 50%; /* Scale down the image to be at most half the width of its container */
+    height: auto; /* Maintain aspect ratio */
+	}
     </style>
 </head>
 <body>
@@ -86,7 +92,7 @@
 	<p>&emsp;&emsp;Ultimo progetto:		Dispositivo per il tracciamento di un robot via GPS
         <br>
 	<!-- Inserting an image -->
-    	<img src="#" alt="Description of the image">
+    	<img src="#" alt="Immagine dell'ultimo progetto" class="project-image">
     </div>
 </body>
 </html>
