--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<p>&emsp;&emsp;Ultimo progetto:		Dispositivo per il tracciamento di un robot via GPS
         <br>
 	<!-- Inserting an image -->
-    	<img src="#" alt="Immagine dell'ultimo progetto" class="project-image">
+    	<img src="PRJ.jpg" alt="Immagine dell'ultimo progetto" class="project-image">
     </div>
 </body>
 </html>
