--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         }
 	.project-image {
     display: block;
-    margin: auto; /* Centers the image */
+    margin: left; /* Centers the image */
     max-width: 50%; /* Scale down the image to be at most half the width of its container */
     height: auto; /* Maintain aspect ratio */
 	}
@@ -91,6 +91,7 @@
 	<br>
 	<p>&emsp;&emsp;Ultimo progetto:		Dispositivo per il tracciamento di un robot via GPS
         <br>
+	<br>
 	<!-- Inserting an image -->
     	<img src="PRJ.jpg" alt="Immagine dell'ultimo progetto" class="project-image">
     </div>
