--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         }
 	.project-image {
     display: block;
-    margin: left; /* Centers the image */
+    margin: 40px; /* Centers the image */
     max-width: 50%; /* Scale down the image to be at most half the width of its container */
     height: auto; /* Maintain aspect ratio */
 	}
