--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Progetti</title>
+    <link rel="icon" type="image/jpg" href="PRJ.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,9 +19,9 @@
             text-align: center;
         }
 	.image-container img {
-            width: 100%;
-            height: 200px;
-            margin: 0 auto;
+	    width: 100%;
+	    height: 50vh;
+	    margin: 0 auto;
 	}
 	.image-container h1 {
 	    position: absolute;
@@ -60,9 +61,9 @@
         }
 	.project-image {
     display: block;
-    margin: 40px; /* Centers the image */
-    max-width: 50%; /* Scale down the image to be at most half the width of its container */
-    height: auto; /* Maintain aspect ratio */
+    margin: 40px;
+    max-width: 50%;
+    height: auto; 
 	}
     </style>
 </head>
