--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 	.image-container img {
 	    width: 100%;
-	    height: 50%;
+	    height: 30vh;
 	    margin: 0 auto;
 	}
 	.image-container h1 {
