--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Progetti</title>
-    <link rel="icon" type="image/jpg" href="PRJ.jpg">
+    <link rel="icon" type="image/png" href="bulb.png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -20,7 +20,7 @@
         }
 	.image-container img {
 	    width: 100%;
-	    height: 20vh;
+	    height: 25vh;
 	    margin: 0 auto;
 	}
 	.image-container h1 {
