--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
 	<br>
         <br>
 	<br>
-	<p>&emsp;&emsp;Ultimo progetto:		Dispositivo per il tracciamento di un robot via GPS
+	<p>&emsp;&emsp;Ultima attività:	</p>
         <br>
+	<p>&emsp;&emsp;> Dispositivo per il tracciamento di un robot via GPS</p>
 	<br>
 	<!-- Inserting an image -->
     	<img src="PRJ.jpg" alt="Immagine dell'ultimo progetto" class="project-image">
