--- a/index.html
+++ b/index.html
@@ -84,18 +84,22 @@
     <!-- Content section -->
     <div class="content">
         <br>
-        <br>
+        <section>
         <p>&emsp;&emsp;Su questo sito inserisco un insieme di progetti a cui ho partecipato e che sono di mio particolare interesse, si possono trovare tutti nell'archivio.</p>
         <p>&emsp;&emsp;Mentre qui nella home, mostro l'ultimo in ordine cronologico.
-	<br>
+	</section>
         <br>
-	<br>
+	<section>
 	<p>&emsp;&emsp;Ultima attività:	</p>
         <br>
 	<p>&emsp;&emsp;> Dispositivo per il tracciamento di un robot via GPS</p>
 	<br>
 	<!-- Inserting an image -->
     	<img src="PRJ.jpg" alt="Immagine dell'ultimo progetto" class="project-image">
+	</section>
     </div>
 </body>
+<footer>
+    <p>Coded by Grillo Edoardo</p>
+</footer>
 </html>
