--- a/index.html
+++ b/index.html
@@ -60,10 +60,19 @@
             color: black;
         }
 	.project-image {
-    display: block;
-    margin: 40px;
-    max-width: 50%;
-    height: auto; 
+	    display: block;
+	    margin: 40px;
+	    max-width: 50%;
+	    height: auto; 
+	}
+	footer {
+	    position: fixed;
+	    bottom: 0;
+	    right: 0;
+	    text-align: right;
+	    padding: 10px;
+	    background-color: #222;
+	    color: white;
 	}
     </style>
 </head>
