--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Progetti</title>
-    <link rel="icon" type="image/png" href="bulb.png">
+    <link rel="icon" type="image/ico" href="bulb.ico">
     <style>
         body {
             font-family: Arial, sans-serif;
