--- a/archivio.html
+++ b/archivio.html
@@ -63,7 +63,7 @@
 <body>
     <!-- Image and title container -->
     <div class="image-container">
-        <img src="EXP.jpg" alt="PROGETTI E APPUNTI">
+        <img src="PRJ.jpg" alt="PROGETTI E APPUNTI">
         <h1></h1>
     </div>
 
