--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	    top: 20%;
 	    left: 50%;
 	    transform: translate(-50%, -50%);
-	    color: black;
+	    color: white;
 	    font-size: 62px;
 	    font-weight: bold;
 	    font-family: 'Comic Sans MS', sans-serif;
