--- a/contatti.html
+++ b/contatti.html
@@ -58,6 +58,15 @@
             background-color: #ddd;
             color: black;
         }
+	footer {
+	    position: fixed;
+	    bottom: 0;
+	    right: 0;
+	    text-align: right;
+	    padding: 10px;
+	    background-color: #334;
+	    color: white;
+	}
     </style>
 </head>
 <body>
@@ -87,4 +96,7 @@
     <br>
 </div>
 </body>
+<footer>
+<p>Coded by Grillo Edoardo</p>
+</footer>
 </html>
