--- a/archivio.html
+++ b/archivio.html
@@ -80,11 +80,10 @@
 	    <br>
 	    <br>
                 <p>&emsp;&emsp;Archivio di tutti i progetti:</p>
-		<br>
-        <p>&emsp;&emsp;> Robocup, 2017</p> 
+        <p>&emsp;&emsp;>> Robot dimostrativo ST, 2018</p> 
         <br>
 	    <br>
-	<p>&emsp;&emsp;> Robot dimostrativo ST, 2018</p> 
+	<p>&emsp;&emsp;>> Robocup, 2017</p> 
         <br>
         <br>
     </div>
