--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #334;
+            background-color: #58D68D;
             color: white;
             text-align: left;
         }
