--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #7F8C8D;
+            background-color: #000080;
             color: white;
             text-align: left;
         }
