--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #000080;
+            background-color: #FFFFFF;
             color: white;
             text-align: left;
         }
@@ -28,7 +28,7 @@
 	    top: 20%;
 	    left: 50%;
 	    transform: translate(-50%, -50%);
-	    color: white;
+	    color: black;
 	    font-size: 62px;
 	    font-weight: bold;
 	    font-family: 'Comic Sans MS', sans-serif;
