--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: #FFFFFF;
-            color: white;
+            color: black;
             text-align: left;
         }
         .image-container {
