--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
     <!-- Image and title container -->
     <div class="image-container">
-        <img src="MAIN.jpg" alt="PROGETTI">
+        <img src="#" alt="PROGETTI">
         <h1>Portfolio Progetti</h1>
     </div>
 
