--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 	    font-weight: bold;
 	    font-family: 'Comic Sans MS', sans-serif;
 	}
-        .content {
-            margin: 20px;
-            font-size: 20px;
-        }
+	.content {
+	  margin: 100px 20px 20px 20px;
+	  font-size: 20px;
+	}
         .navbar {
             background-color: #222;
             overflow: hidden;
