--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
 	  margin: 100px 20px 20px 20px;
 	  font-size: 20px;
 	}
-        .navbar {
-            background-color: #222;
-            overflow: hidden;
-            position: absolute;
-            top: 200px;
-            width: 100%;
-        }
+	.navbar {
+	  background-color: #222;
+	  overflow: hidden;
+	  position: fixed;
+	  top: 0;
+	  width: 100%;
+	  z-index: 1;
+	}
         .navbar a {
             float: left;
             display: block;
