--- a/index.html
+++ b/index.html
@@ -33,18 +33,17 @@
 	    font-weight: bold;
 	    font-family: 'Comic Sans MS', sans-serif;
 	}
-	.content {
-	  margin: 100px 20px 20px 20px;
-	  font-size: 20px;
-	}
-	.navbar {
-	  background-color: #222;
-	  overflow: hidden;
-	  position: fixed;
-	  top: 0;
-	  width: 100%;
-	  z-index: 1;
-	}
+        .content {
+            margin: 20px;
+            font-size: 20px;
+        }
+        .navbar {
+            background-color: #222;
+            overflow: hidden;
+            position: absolute;
+            top: 200px;
+            width: 100%;
+        }
         .navbar a {
             float: left;
             display: block;
