--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             font-size: 20px;
         }
         .navbar {
-            background-color: #222;
+            background-color: #F7F9F9;
             overflow: hidden;
             position: absolute;
             top: 200px;
@@ -47,7 +47,7 @@
         .navbar a {
             float: left;
             display: block;
-            color: white;
+            color: black;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
