--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #FFFFFF;
+            background-color: #F7F9F9;
             color: black;
             text-align: left;
         }
@@ -38,7 +38,7 @@
             font-size: 20px;
         }
         .navbar {
-            background-color: #F7F9F9;
+            background-color: #ECF0F1; 
             overflow: hidden;
             position: absolute;
             top: 200px;
