--- a/index.html
+++ b/index.html
@@ -37,24 +37,25 @@
             margin: 20px;
             font-size: 20px;
         }
-        .navbar {
-            background-color: #ECF0F1; 
-            overflow: hidden;
-            position: absolute;
-            top: 200px;
-            width: 100%;
-        }
-        .navbar a {
-            float: left;
-            display: block;
-            color: black;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
+	.navbar {
+	    background-color: #ECF0F1; 
+	    overflow: hidden;
+	    position: fixed; /* Change from 'absolute' to 'fixed' */
+	    top: 0; /* Place the navbar at the top of the page */
+	    width: 100%;
+	    text-align: center; /* Center the text within the navbar */
+	}
+	
+	.navbar a {
+	    display: inline-block; /* Make the buttons inline-block for centering */
+	    color: black;
+	    text-align: center;
+	    padding: 14px 16px;
+	    text-decoration: none;
+	    font-size: 17px;
 	    font-weight: bold;
 	    font-family: 'Comic Sans MS', sans-serif;
-        }
+	}
         .navbar a:hover {
             background-color: #ddd;
             color: black;
