--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
             color: black;
             text-align: left;
         }
-        .image-container {
-            position: relative;
-            text-align: center;
-        }
+	.image-container {
+	    position: relative;
+	    text-align: center;
+	    margin-top: 60px; /* Adjust the margin-top value as needed */
+	}
+	
 	.image-container img {
 	    width: 100%;
 	    height: 25vh;
 	    margin: 0 auto;
 	}
+	
 	.image-container h1 {
 	    position: absolute;
 	    top: 20%;
