--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
 	    color: black;
 	    text-align: center;
 	    padding: 14px 16px;
+	    margin-right: 20px; /* Adjust the margin-right value for spacing */
 	    text-decoration: none;
 	    font-size: 17px;
 	    font-weight: bold;
 	    font-family: 'Comic Sans MS', sans-serif;
 	}
+	
 	.navbar a {
-	    display: inline-block; /* Make the buttons inline-block for centering */
+	    display: inline-block;
 	    color: black;
 	    text-align: center;
 	    padding: 14px 16px;
