--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #2980B9;
+            background-color: #34495E;
             color: black;
             text-align: left;
         }
@@ -41,7 +41,7 @@
             font-size: 20px;
         }
 	.navbar {
-	    background-color: #2980B9; 
+	    background-color: #34495E; 
 	    overflow: hidden;
 	    position: fixed;
 	    top: 0;
