--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
             font-size: 20px;
         }
 	.navbar {
-	    background-color: #ECF0F1; 
+	    background-color: #34495E; 
 	    overflow: hidden;
 	    position: fixed;
 	    top: 0;
 	    width: 100%;
 	    text-align: center;
-	    padding: 10px 0; /* Adjust the padding value for thickness */
+	    padding: 8px 0; /* Adjust the padding value for thickness */
 	}
 	
 	.brand {
 	    display: inline-block;
 	    color: black;
 	    text-align: center;
-	    padding: 10px 16px; /* Adjust the padding value for thickness */
+	    padding: 8px 16px; /* Adjust the padding value for thickness */
 	    margin-right: 20px;
 	    text-decoration: none;
 	    font-size: 17px;
@@ -66,7 +66,7 @@
 	    display: inline-block;
 	    color: black;
 	    text-align: center;
-	    padding: 10px 16px; /* Adjust the padding value for thickness */
+	    padding: 8px 16px; /* Adjust the padding value for thickness */
 	    text-decoration: none;
 	    font-size: 17px;
 	    font-weight: bold;
