--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 	    top: 0;
 	    width: 100%;
 	    text-align: center;
-	    padding: 8px 0; /* Adjust the padding value for thickness */
+	    height: 50px; /* Adjust the height value for the navigation bar */
 	}
 	
 	.brand {
 	    display: inline-block;
 	    color: black;
 	    text-align: center;
-	    padding: 8px 16px; /* Adjust the padding value for thickness */
+	    padding: 15px 16px; /* Keep the padding values as needed */
 	    margin-right: 20px;
 	    text-decoration: none;
 	    font-size: 17px;
@@ -66,7 +66,7 @@
 	    display: inline-block;
 	    color: black;
 	    text-align: center;
-	    padding: 8px 16px; /* Adjust the padding value for thickness */
+	    padding: 15px 16px; /* Keep the padding values as needed */
 	    text-decoration: none;
 	    font-size: 17px;
 	    font-weight: bold;
