--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	    display: inline-block;
 	    color: black;
 	    text-align: center;
-	    padding: 15px 16px; /* Keep the padding values as needed */
+	    padding: 10px 16px; /* Keep the padding values as needed 15*/
 	    margin-right: 20px;
 	    text-decoration: none;
 	    font-size: 17px;
