--- a/index.html
+++ b/index.html
@@ -53,24 +53,24 @@
 	    text-align: center;
 	    height: 30px; /* Adjust the height value as needed */
 	}
-	    
+	
 	.brand {
 	    display: inline-block;
 	    color: black;
 	    text-align: center;
-	    padding: 10px 16px; /* Keep the padding values as needed 15*/
+	    padding: 5px 16px; /* Adjust the padding values for the brand */
 	    margin-right: 20px;
 	    text-decoration: none;
 	    font-size: 17px;
 	    font-weight: bold;
 	    font-family: 'Comic Sans MS', sans-serif;
 	}
-	    
+	
 	.navbar a {
 	    display: inline-block;
 	    color: black;
 	    text-align: center;
-	    padding: 15px 16px; /* Keep the padding values as needed */
+	    padding: 5px 10px; /* Adjust the padding values for the navigation links */
 	    text-decoration: none;
 	    font-size: 17px;
 	    font-weight: bold;
